tests/ui/parser/issues/issue-76597.stderr
error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `y`
  --> $DIR/issue-76597.rs:7:38
   |
LL | ...                   x: u8
   |                            -
   |                            |
   |                            expected one of 7 possible tokens
   |                            help: missing `,`
LL | ...                   y: u8,
   |                       ^ unexpected token

error: aborting due to previous error

